test/integration/bad/for_loops/assign_to_loop_var3.stan
transformed data {
  // nested foreach (array)
  while (1) {
    array[2, 3] int vs;
    for (v in vs) {
      v[1] = 0;
      break;
    }
  }

}
